--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
       crossorigin="anonymous"
     />
     <link href="src/style.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Current Weather</title>
+    <form>
+      <input type="text" placeholder="New York" class="form-control-sm" />
+      <input type="submit" class="btn-light" />
+    </form>
   </head>
   <body></body>
 </html>
