Added basic HTML content of page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       <input type="text" placeholder="New York" class="form-control-sm" />
       <input type="submit" class="btn-light" />
     </form>
+    <h1>New York</h1>
+    <h4>Sunday, 22 August 2021, 7:43 pm</h4>
+    <h2>75° <small>F | C</small></h2>
+    <ul>
+      <li>Clear</li>
+      <li>Humidity: 80%</li>
+      <li>Wind Speed: 10 mph NW</li>
+    </ul>
   </head>
   <body></body>
 </html>
