--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     />
     <link href="src/style.css" rel="stylesheet" />
     <title>Current Weather</title>
-    <form>
-      <input type="text" placeholder="New York" class="form-control-sm" />
-      <input type="submit" class="btn-light" />
-    </form>
-    <h1>New York</h1>
-    <h4>Sunday, 22 August 2021, 7:43 pm</h4>
-    <h2>75° <small>F | C</small></h2>
-    <ul>
-      <li>Clear</li>
-      <li>Humidity: 80%</li>
-      <li>Wind Speed: 10 mph NW</li>
-    </ul>
-  </head>
-  <body></body>
+   </head>
+  <body>   <div class="container"><form>
+    <input type="text" placeholder="New York" class="form-control-sm" />
+    <input type="submit" class="btn-light" />
+  </form>
+  <h1>New York</h1>
+  <h4>Sunday, 22 August 2021, 7:43 pm</h4>
+  <h2>75° <small>F | C</small></h2>
+  <ul>
+    <li>Clear</li>
+    <li>Humidity: 80%</li>
+    <li>Wind Speed: 10 mph NW</li>
+  </ul>
+</body>
 </html>
