--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
     <link href="src/style.css" rel="stylesheet" />
     <title>Current Weather</title>
    </head>
-  <body>   <div class="container"><form>
+  <body>   
+    <div class="container">
+      <form>
     <input type="text" placeholder="New York" class="form-control-sm" />
     <input type="submit" class="btn-light" />
   </form>
-  <h1>New York</h1>
-  <h4>Sunday, 22 August 2021, 7:43 pm</h4>
-  <h2>75° <small>F | C</small></h2>
+  <h1 id="city-name">New York</h1>
+  <p class="date-time">Sunday, 22 August 2021<br>
+  Last updated 7:43 pm</p>
+  <p class="temperature large" id="current-temp">75°</p><span class="superscript">F | C</span>
   <ul>
     <li>Clear</li>
     <li>Humidity: 80%</li>
-    <li>Wind Speed: 10 mph NW</li>
+    <li>Wind: 10 mph NW</li>
   </ul>
+  <script src="src/app.js" type="text/javascript"></script>
 </body>
 </html>
