--- a/index.html
+++ b/index.html
@@ -12,22 +12,34 @@
     />
     <link href="src/style.css" rel="stylesheet" />
     <title>Current Weather</title>
-   </head>
-  <body>   
+  </head>
+  <body>
     <div class="container">
       <form>
-    <input type="text" placeholder="New York" class="form-control-sm" />
-    <input type="submit" class="btn-light" />
-  </form>
-  <h1 id="city-name">New York</h1>
-  <p class="date-time">Sunday, 22 August 2021<br>
-  Last updated 7:43 pm</p>
-  <p class="temperature large" id="current-temp">75°</p><span class="superscript">F | C</span>
-  <ul>
-    <li>Clear</li>
-    <li>Humidity: 80%</li>
-    <li>Wind: 10 mph NW</li>
-  </ul>
-  <script src="src/app.js" type="text/javascript"></script>
-</body>
+        <input type="text" placeholder="New York" class="form-control-sm" />
+        <input type="submit" class="btn-light" />
+      </form>
+      <h1 id="city-name">New York</h1>
+      <p class="date-time">
+        Sunday, 22 August 2021<br />
+        Last updated <span id="curr-time">7:43 pm</span>
+      </p>
+      <p class="temperature large" id="current-temp">75°</p>
+      <span class="superscript">F | C</span>
+      <ul>
+        <li id="current-cond">Clear</li>
+        <li id="current-humidity">Humidity: 80%</li>
+        <li id="current-wind">Wind: 10 mph NW</li>
+      </ul>
+    </div>
+    <footer>
+      <p class="small">
+        This open-source project was created by
+        <a href="https://github.com/mecoledpt" target="_blank">Melanie Cole</a>
+        and is hosted by
+        <a href="http://www.netlify.com" target="_blank">Netlify</a>
+      </p>
+    </footer>
+    <script src="src/app.js" type="text/javascript"></script>
+  </body>
 </html>
