Added formatDate and formatTime functions to update HTML

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </form>
       <h1 id="city-name">New York</h1>
       <p class="date-time">
-        Sunday, 22 August 2021<br />
-        Last updated <span id="curr-time">7:43 pm</span>
+        <span id="current-date">Sunday, 22 August 2021</span><br />
+        <span id="curr-time">Last updated 7:43 pm</span>
       </p>
       <p class="temperature large" id="current-temp">75°</p>
       <span class="superscript">F | C</span>
