added city search form handler, needs more work

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
   </head>
   <body>
     <div class="container">
-      <form>
-        <input type="text" placeholder="New York" class="form-control-sm" />
+      <form id="city-search">
+        <input
+          type="text"
+          autocomplete="off"
+          placeholder="New York"
+          class="form-control-sm"
+          id="city-name-input"
+        />
         <input type="submit" class="btn-light" />
       </form>
       <h1 id="city-name">New York</h1>
