Added showWeather, windDirCompass, showWeatherIcon functions

--- a/index.html
+++ b/index.html
@@ -30,12 +30,22 @@
         <span id="current-date">Sunday, 22 August 2021</span><br />
         <span id="curr-time">Last updated 7:43 pm</span>
       </p>
+      <p class="weather icon" id="cond-icon">☀️</p>
       <p class="temperature large" id="current-temp">75°</p>
       <span class="superscript">F | C</span>
       <ul>
         <li id="current-cond">Clear</li>
-        <li id="current-humidity">Humidity: 80%</li>
-        <li id="current-wind">Wind: 10 mph NW</li>
+        <li class="today-high-low">
+          High <span id="today-high">°</span> / Low
+          <span id="today-low">24</span>°
+        </li>
+        <li class="humidity">
+          Humidity: <span id="current-humidity">80</span>%
+        </li>
+        <li class="wind">
+          Wind: <span id="current-wind-speed">10</span>mph
+          <span id="current-wind-dir">NW</span>
+        </li>
       </ul>
     </div>
     <footer>
