Replaced current high and low with feels like, fixed some margins

--- a/index.html
+++ b/index.html
@@ -31,20 +31,21 @@
         <span id="current-date">Sunday, 22 August 2021</span><br />
         <span id="curr-time">Last updated 7:43 pm</span>
       </p>
-      <p class="weather icon" id="cond-icon">☀️</p>
-      <p class="temperature large" id="current-temp">75°</p>
-      <span class="superscript">F | C</span>
+      <p>
+        <span id="cond-icon">☀️</span>
+        <span class="temperature large" id="current-temp">75°</span>
+        <span class="superscript">F | C</span>
+      </p>
       <ul>
         <li id="current-cond">Clear</li>
-        <li class="today-high-low">
-          High <span id="today-high">°</span> / Low
-          <span id="today-low">24</span>°
+        <li class="feels-like">
+          Feels like <span id="feels-like-temp">80°</span>
         </li>
         <li class="humidity">
-          Humidity: <span id="current-humidity">80</span>%
+          Humidity: <span id="current-humidity">80%</span>
         </li>
         <li class="wind">
-          Wind: <span id="current-wind-speed">10</span>mph
+          Wind: <span id="current-wind-speed">10</span>
           <span id="current-wind-dir">NW</span>
         </li>
       </ul>
