--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <link href="src/style.css" rel="stylesheet" />
     <title>Current Weather</title>
   </head>
-  <body>
+  <body class="light">
     <div class="container">
       <form id="city-search">
         <input
           type="text"
           autocomplete="off"
           placeholder="New York"
-          class="form-control-sm"
+          class="form-control-sm input-text"
           id="city-name-input"
         />
-        <input type="submit" class="btn-light" />
+        <input type="submit" class="btn-light button" />
       </form>
       <h1 id="city-name">New York</h1>
       <p class="date-time">
@@ -33,8 +33,11 @@
       </p>
       <p>
         <span id="cond-icon">☀️</span>
-        <span class="temperature large" id="current-temp">75°</span>
-        <span class="superscript">F | C</span>
+        <span class="temperature large" id="current-temp">75</span>
+        <span class="superscript"
+          ><a href="#" id="fahrenheit-link" class="inactive">F</a> |
+          <a href="#" id="celcius-link">C</a></span
+        >
       </p>
       <ul>
         <li id="current-cond">Clear</li>
