Updated github link to be specific to this repository

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     <footer>
       <p class="small">
         This open-source project was created by
-        <a href="https://github.com/mecoledpt" target="_blank">Melanie Cole</a>
+        <a
+          href="https://github.com/mecoledpt/current-weather-app"
+          target="_blank"
+          >Melanie Cole</a
+        >
         and is hosted by
         <a href="http://www.netlify.com" target="_blank">Netlify</a>
       </p>
