Started to build HTML for forecast days, added open source weather icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link href="src/weather-icons.min.css" rel="stylesheet" />
     <link href="src/style.css" rel="stylesheet" />
     <title>Current Weather</title>
   </head>
@@ -52,6 +53,15 @@
           <span id="current-wind-dir">NW</span>
         </li>
       </ul>
+      <div class="weather-forecast">
+        <div class="row">
+          <div class="col-2">
+            Thu
+            <img src="" />
+            thermometer icon 94° 40° umbrella icon 50%
+          </div>
+        </div>
+      </div>
     </div>
     <footer>
       <p class="small">
