--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       </ul>
       <div class="weather-forecast">
         <div class="row">
-          <div class="col-2">
-            <div class="forecast-day">Thu</div>
+          <div class="col-2 forecast-card">
+            <div class="forecast-day bold">Thu</div>
             <div class="forecast-icon"><i class="bi bi-sun-fill"></i></div>
 
             <div class="forecast-temperature">
               <i class="bi bi-thermometer-half"></i>
-              <span class="forecast-temperature-high">94°</span> /
+              <span class="forecast-temperature-high bold">94°</span> /
               <span class="forecast-temperature-low">60°</span>
             </div>
             <div class="forecast-precipitation">
