--- a/index.html
+++ b/index.html
@@ -54,21 +54,7 @@
           <span id="current-wind-dir">NW</span>
         </li>
       </ul>
-      <div class="weather-forecast row" id="forecast">
-        <div class="col-2 forecast-card">
-          <div class="forecast-day bold">Thu</div>
-          <div class="forecast-icon"><i class="bi bi-sun-fill"></i></div>
-
-          <div class="forecast-temperature">
-            <i class="bi bi-thermometer-half"></i>
-            <span class="forecast-temperature-high bold">94°</span> /
-            <span class="forecast-temperature-low">60°</span>
-          </div>
-          <div class="forecast-precipitation">
-            <i class="bi bi-umbrella-fill"></i> 50%
-          </div>
-        </div>
-      </div>
+      <div class="weather-forecast row" id="forecast"></div>
     </div>
     <footer>
       <p class="small">
