Fixed styling and background display parameters

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="src/style.css" rel="stylesheet" />
     <title>Current Weather</title>
   </head>
-  <body class="light">
+  <body>
     <div class="container">
       <form id="city-search">
         <input
