removed temperature conversion functions and links

--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
           ><i id="cond-icon" class="bi bi-sun-fill"></i
         ></span>
         <span class="temperature large" id="current-temp">75°</span>
-        <span class="superscript"
-          ><a href="#" id="fahrenheit-link" class="inactive">F</a> |
-          <a href="#" id="celcius-link">C</a></span
-        >
+        <span class="superscript">F</span>
       </p>
       <ul>
         <li id="current-cond">Clear</li>
