identified bug in current data for sunrise/sunset and dt relationships

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
         <span id="curr-time">Last updated 7:43 pm</span>
       </p>
       <p>
-        <span class="cond-icon"
-          ><i id="cond-icon" class="bi bi-sun-fill"></i
-        ></span>
+        <span class="cond-icon"><i id="cond-icon"></i></span>
         <span class="temperature large" id="current-temp">75°</span>
         <span class="superscript">F</span>
       </p>
