fixed header responsiveness issue - will need more work

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <input type="submit" class="button" />
         </form>
 
-        <button class="locate-btn">
-          <i class="bi bi-pin-map" id="locate-btn"></i> Locate
+        <button class="locate-btn" id="locate-btn">
+          <i class="bi bi-pin-map"></i> Locate
         </button>
       </header>
       <h1 id="city-name">New York</h1>
